// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Layout addon panel in right 1`] = `
<div>
  <div
    class="css-16z7x6f e7rfqu0"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="css-7r9jvr e97yylu0"
        >
          <div
            class="css-9in0fq e97yylu1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  vertical "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
        >
          <div
            class="Pane vertical Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-1e1vreg e97yylu3"
            >
              <div
                class="css-1nsb3py e97yylu5"
              />
              <div
                class="css-1xkk3c8 e97yylu4"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer vertical "
          />
          <div
            class="Pane vertical Pane2  "
            style="flex:none;position:relative;outline:none;width:400px"
          >
            <div
              class="css-1929wko e97yylu2"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout default 1`] = `
<div>
  <div
    class="css-16z7x6f e7rfqu0"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="css-7r9jvr e97yylu0"
        >
          <div
            class="css-9in0fq e97yylu1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67 e97yylu3"
            >
              <div
                class="css-1nsb3py e97yylu5"
              />
              <div
                class="css-1xkk3c8 e97yylu4"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal "
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:200px;display:flex"
          >
            <div
              class="css-hys0kv e97yylu2"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout full screen 1`] = `
<div>
  <div
    class="css-16z7x6f e7rfqu0"
  >
    <div
      class="SplitPane  vertical disabled"
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1px"
      >
        <div
          class="css-1yb218t e97yylu0"
        >
          <div
            class="css-9in0fq e97yylu1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical disabled"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal disabled"
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67 e97yylu3"
            >
              <div
                class="css-1nsb3py e97yylu5"
              />
              <div
                class="css-15swx87 e97yylu4"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal disabled"
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:1px;display:flex"
          >
            <div
              class="css-1yfjvq7 e97yylu2"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout mobile 1`] = `
<div>
  <div
    class="css-1nhql0h e7rfqu0"
  >
    <div>
      <div
        class="css-1kes5pl e16i77hj1"
      >
        <div
          class="css-1whcqvw e1lzzkxx1"
        >
          <button
            class="css-xcko46 e1lzzkxx2"
            role="tab"
            type="button"
          >
            Navigator
          </button>
          <button
            class="css-1hf831j e1lzzkxx2"
            role="tab"
            type="button"
          >
            Preview
          </button>
          <button
            class="css-xcko46 e1lzzkxx2"
            role="tab"
            type="button"
          >
            Addons
          </button>
        </div>
      </div>
      <div
        class="css-1hyfx7x e16i77hj0"
      >
        <div
          class="css-9in0fq e7rfqu1"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
      </div>
      <div
        class="css-1p46ag7 e16i77hj0"
        selected=""
      >
        <div
          class="css-9in0fq e7rfqu1"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
          >
            Preview
          </div>
        </div>
      </div>
      <div
        class="css-1hyfx7x e16i77hj0"
      >
        <div
          style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
        >
          Addon
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout no addon panel 1`] = `
<div>
  <div
    class="css-16z7x6f e7rfqu0"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="css-7r9jvr e97yylu0"
        >
          <div
            class="css-9in0fq e97yylu1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal disabled"
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67 e97yylu3"
            >
              <div
                class="css-1nsb3py e97yylu5"
              />
              <div
                class="css-1xkk3c8 e97yylu4"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal disabled"
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:1px;display:flex"
          >
            <div
              class="css-1yfjvq7 e97yylu2"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout no stories panel 1`] = `
<div>
  <div
    class="css-16z7x6f e7rfqu0"
  >
    <div
      class="SplitPane  vertical disabled"
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1px"
      >
        <div
          class="css-1yb218t e97yylu0"
        >
          <div
            class="css-9in0fq e97yylu1"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical disabled"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67 e97yylu3"
            >
              <div
                class="css-1nsb3py e97yylu5"
              />
              <div
                class="css-1xkk3c8 e97yylu4"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal "
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:200px;display:flex"
          >
            <div
              class="css-hys0kv e97yylu2"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;
